[package]
name = "hackdose_app"
version = "0.10.0"
edition = "2021"
authors = ["Philipp Vollmer"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/torfmaster/hackdose"
description = "Web frontend for hackdose"

[dependencies]
browser-panic-hook = "0.2"
chrono = { version = "0.4.30", default-features = false, features = ["wasmbind"] }
gloo = "0.11.0"
gloo-utils = "0.2"
log = "0.4"
patternfly-yew = { version = "0.5.6", features = ["tree", "dual_list_selector", "icons-fab"] }
popper-rs = { version = "0.3.2", features = ["yew", "debug"] }
serde_json = "1"
strum = { version = "0.25", features = ["derive"] }
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3"
yew-more-hooks = { version = "0.3.0", features = ["yew-hooks"] }
yew-nested-router = "0.6.1"
hackdose_server_shared = { version = "0.1.0", path="../server_shared" }
plotters = { version= "0.3.4", features=["svg_backend", "chrono", "line_series"], default-features=false}

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlElement",
    "HtmlInputElement"
]

# release profile settings to reduce the final binary size
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true
