[package]
name = "hackdose_mqtt_client"
version = "0.1.0"
edition = "2021"

[dependencies]
hackdose-sml-parser = { version = "0.10.0", path="../sml-parser" }
rumqttc = "0.24.0"
tokio-serial = "5.4.3"
tokio = { version="1.23.0", features=["macros", "rt-multi-thread", "fs"] }
tokio-stream = { version="0.1.11", features=["sync"] }
clap = { version="4.5.16", features=["derive"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_yaml = "0.9.34"
